Gives Media Element focus upon mouse iteration.

This change makes it such that when a user interacts with the media element
or its controls,the media element will be given focus. This allows one to use
the keyboard controls to control the video.

Bug: 827565
Change-Id: I21a6d5ab2b75aeb3bf646c694eeac62f787c89aa
Reviewed-on: https://chromium-review.googlesource.com/c/1292814
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: CJ DiMeglio <lethalantidote@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614513}
Former-commit-id: 4c0284d5fa813c6b993da4ac57a54db665c2b523