third_party/blink/web_tests/fullscreen/full-screen-test.js
@@ -9,7 +9,7 @@ if (window.testRunner) {
     testRunner.waitUntilDone();
 }
 
-function runWithKeyDown(fn)
+function runWithKeyDown(fn, key)
 {
     function thunk() {
         document.removeEventListener("keypress", thunk, false);
@@ -17,8 +17,10 @@ function runWithKeyDown(fn)
     }
     document.addEventListener("keypress", thunk, false);
 
-    if (window.eventSender)
-        eventSender.keyDown(" ", []);
+    if (window.eventSender) {
+      let character = key || " ";
+      eventSender.keyDown(character, []);
+    }
 }
 
 function logConsole()
